# f1tenth_system

./: .gitignore  .gitmodules  Makefile  pyproject.toml
docs/ros_start/: Makefile  README.md
f1tenth_stack/: package.xml  setup.py
f1tenth_stack/config/: auto_control.yaml  joy_teleop.yaml
f1tenth_stack/f1tenth_stack/autonomous/: base.py  straight.py
f1tenth_stack/launch/: bringup_auto_launch.py  bringup_auto_roomba_launch.py  bringup_auto_wiggle_launch.py  bringup_launch.py
